# raytracing_rust

./: Cargo.toml
src/: camera.rs  colour.rs  gui.rs  hitable.rs  lib.rs  main.rs  material.rs  ray.rs  sphere.rs  tets.rs
src/shapes/: box.rs  sphere.rs
