[package]
name = "raytracing_in_a_wekeend_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

image = "0.23.7"
glam ="0.24.1"
indicatif = "0.17.6"
rand = "0.8.5"
itertools ="0.11.0"
rayon = "1.1.0"